// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form text area component should render disabled when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  />
  <textarea
    class="govuk-textarea form-control-3-4 "
    disabled=""
    id="text-field"
    name="text-field"
    rows="5"
  />
</div>
`;

exports[`Form text area component should render of type when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  />
  <textarea
    class="govuk-textarea form-control-3-4 "
    id="text-field"
    name="text-field"
    rows="5"
  />
</div>
`;

exports[`Form text area component should render with default props 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  />
  <textarea
    class="govuk-textarea form-control-3-4 "
    id="text-field"
    name="text-field"
    rows="5"
  />
</div>
`;

exports[`Form text area component should render with error when passed 1`] = `
<div
  class="govuk-form-group govuk-form-group--error"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  />
  <span
    class="govuk-error-message"
    id="text-field-error"
  >
    Some error message
  </span>
  <textarea
    class="govuk-textarea form-control-3-4 govuk-textarea--error"
    id="text-field"
    name="text-field"
    rows="5"
  />
</div>
`;

exports[`Form text area component should render with hint when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  />
  <span
    class="govuk-hint"
  >
    Put some text in the box below
  </span>
  <textarea
    class="govuk-textarea form-control-3-4 "
    id="text-field"
    name="text-field"
    rows="5"
  />
</div>
`;

exports[`Form text area component should render with label when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  >
    My text field
  </label>
  <textarea
    class="govuk-textarea form-control-3-4 "
    id="text-field"
    name="text-field"
    rows="5"
  />
</div>
`;

exports[`Form text area component should render with value when passed 1`] = `
<div
  class="govuk-form-group"
>
  <label
    class="govuk-label govuk-label--s"
    for="text-field"
    id="text-field-label"
  />
  <textarea
    class="govuk-textarea form-control-3-4 "
    id="text-field"
    name="text-field"
    rows="5"
  >
    field value
  </textarea>
</div>
`;
